examples/test/testpolicy11827.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11827
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key24: value5
      key35: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value11
      podSelector:
        matchLabels:
          key47: value26
          key29: value23
